testdata/baselines/reference/submodule/conformance/contextuallyTypedStringLiteralsInJsxAttributes02.errors.txt
file.tsx(27,64): error TS2769: No overload matches this call.
  The last overload gave the following error.
    Type '{ onClick: (k: "left" | "right") => void; extra: true; }' is not assignable to type 'IntrinsicAttributes & LinkProps'.
      Property 'extra' does not exist on type 'IntrinsicAttributes & LinkProps'.
file.tsx(28,24): error TS2769: No overload matches this call.
  The last overload gave the following error.
    Type '{ onClick: (k: "left" | "right") => void; extra: true; }' is not assignable to type 'IntrinsicAttributes & LinkProps'.
      Property 'onClick' does not exist on type 'IntrinsicAttributes & LinkProps'.
file.tsx(29,43): error TS2769: No overload matches this call.
  The last overload gave the following error.
    Type '{ goTo: "home"; extra: true; }' is not assignable to type 'IntrinsicAttributes & LinkProps'.
      Property 'extra' does not exist on type 'IntrinsicAttributes & LinkProps'.
file.tsx(30,36): error TS2769: No overload matches this call.
  The last overload gave the following error.
    Type '{ goTo: "home"; extra: true; }' is not assignable to type 'IntrinsicAttributes & LinkProps'.
      Property 'extra' does not exist on type 'IntrinsicAttributes & LinkProps'.
file.tsx(33,65): error TS2322: Type '{ onClick: (k: "left" | "right") => void; extra: true; }' is not assignable to type 'IntrinsicAttributes & ButtonProps'.
  Property 'extra' does not exist on type 'IntrinsicAttributes & ButtonProps'.
file.tsx(36,44): error TS2322: Type '{ goTo: "home"; extra: true; }' is not assignable to type 'IntrinsicAttributes & LinkProps'.
  Property 'extra' does not exist on type 'IntrinsicAttributes & LinkProps'.


==== file.tsx (6 errors) ====
    import React = require('react')
    
    export interface ClickableProps {
        children?: string;
        className?: string;
    }
    
    export interface ButtonProps extends ClickableProps {
        onClick: (k: "left" | "right") => void;
    }
    
    export interface LinkProps extends ClickableProps {
        goTo: "home" | "contact";
    }
    
    export function MainButton(buttonProps: ButtonProps): JSX.Element;
    export function MainButton(linkProps: LinkProps): JSX.Element;
    export function MainButton(props: ButtonProps | LinkProps): JSX.Element {
        const linkProps = props as LinkProps;
        if(linkProps.goTo) {
            return this._buildMainLink(props);
        }
    
        return this._buildMainButton(props);
    }
    
    const b0 = <MainButton {...{onClick: (k) => {console.log(k)}}} extra />;  // k has type "left" | "right"
                                                                   ~~~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   The last overload gave the following error.
!!! error TS2769:     Type '{ onClick: (k: "left" | "right") => void; extra: true; }' is not assignable to type 'IntrinsicAttributes & LinkProps'.
!!! error TS2769:       Property 'extra' does not exist on type 'IntrinsicAttributes & LinkProps'.
!!! related TS2771 file.tsx:17:17: The last overload is declared here.
    const b2 = <MainButton onClick={(k)=>{console.log(k)}} extra />;  // k has type "left" | "right"
                           ~~~~~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   The last overload gave the following error.
!!! error TS2769:     Type '{ onClick: (k: "left" | "right") => void; extra: true; }' is not assignable to type 'IntrinsicAttributes & LinkProps'.
!!! error TS2769:       Property 'onClick' does not exist on type 'IntrinsicAttributes & LinkProps'.
!!! related TS2771 file.tsx:17:17: The last overload is declared here.
    const b3 = <MainButton {...{goTo:"home"}} extra />;  // goTo has type"home" | "contact"
                                              ~~~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   The last overload gave the following error.
!!! error TS2769:     Type '{ goTo: "home"; extra: true; }' is not assignable to type 'IntrinsicAttributes & LinkProps'.
!!! error TS2769:       Property 'extra' does not exist on type 'IntrinsicAttributes & LinkProps'.
!!! related TS2771 file.tsx:17:17: The last overload is declared here.
    const b4 = <MainButton goTo="home" extra />;  // goTo has type "home" | "contact"
                                       ~~~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   The last overload gave the following error.
!!! error TS2769:     Type '{ goTo: "home"; extra: true; }' is not assignable to type 'IntrinsicAttributes & LinkProps'.
!!! error TS2769:       Property 'extra' does not exist on type 'IntrinsicAttributes & LinkProps'.
!!! related TS2771 file.tsx:17:17: The last overload is declared here.
    
    export function NoOverload(buttonProps: ButtonProps): JSX.Element { return undefined }
    const c1 = <NoOverload  {...{onClick: (k) => {console.log(k)}}} extra />;  // k has type any
                                                                    ~~~~~
!!! error TS2322: Type '{ onClick: (k: "left" | "right") => void; extra: true; }' is not assignable to type 'IntrinsicAttributes & ButtonProps'.
!!! error TS2322:   Property 'extra' does not exist on type 'IntrinsicAttributes & ButtonProps'.
    
    export function NoOverload1(linkProps: LinkProps): JSX.Element { return undefined }
    const d1 = <NoOverload1 {...{goTo:"home"}} extra  />;  // goTo has type "home" | "contact"
                                               ~~~~~
!!! error TS2322: Type '{ goTo: "home"; extra: true; }' is not assignable to type 'IntrinsicAttributes & LinkProps'.
!!! error TS2322:   Property 'extra' does not exist on type 'IntrinsicAttributes & LinkProps'.
    